--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -14,3 +14,6 @@ eureka:
   client:
     service-url:
       defaultZone: http://localhost:10086/eureka/,http://localhost:10087/eureka/
+#  instance:
+#    lease-renewal-interval-in-seconds: 30
+#    lease-expiration-duration-in-seconds: 90
