--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,8 @@
         <module>user-service</module>
         <module>consumer-demo</module>
         <module>eureka-server</module>
+        <module>gateway</module>
+        <module>gateway</module>
     </modules>
     <packaging>pom</packaging>
 
